Set the joiner bolts to auto-scale and gave custom arguments to the workers.