@@ -115,7 +115,7 @@ public class TpchQueryFiveTopology {
 				new Fields(Order.query5Schema), "C_CUSTKEY", "O_CUSTKEY", 240000, 1000);
 		joiner.setOutputSchema(new Fields(dataSchema));
 		builder.setBolt("joinjoincust", new SynefoJoinBolt("joinjoincust", synefoIP, synefoPort, 
-				joiner, zooIP, false), 3)
+				joiner, zooIP, true), 3)
 		.directGrouping("joindispatch");
 		taskNumber += 3;
 		taskList = new ArrayList<String>();
@@ -125,7 +125,7 @@ public class TpchQueryFiveTopology {
 				new Fields(Customer.query5schema), "O_CUSTKEY", "C_CUSTKEY", 240000, 1000);
 		joiner.setOutputSchema(new Fields(dataSchema));
 		builder.setBolt("joinjoinorder", new SynefoJoinBolt("joinjoinorder", synefoIP, synefoPort, 
-				joiner, zooIP, false), 3)
+				joiner, zooIP, true), 3)
 		.directGrouping("joindispatch");
 		taskNumber += 3;
 		taskList = new ArrayList<String>();
@@ -136,14 +136,14 @@ public class TpchQueryFiveTopology {
 				"supplier", new Fields(Supplier.query5Schema), "L_SUPPKEY", "S_SUPPKEY", 240000, 1000);
 		joiner.setOutputSchema(new Fields(dataSchema));
 		builder.setBolt("joinjoinline", new SynefoJoinBolt("joinjoinline", synefoIP, synefoPort, 
-				joiner, zooIP, false), 3)
+				joiner, zooIP, true), 3)
 		.directGrouping("joindispatch2");
 		taskNumber += 3;
 		joiner = new JoinJoiner("supplier", new Fields(Supplier.query5Schema), 
 				"lineitem", new Fields(LineItem.query5Schema), "S_SUPPKEY", "L_SUPPKEY", 240000, 1000);
 		joiner.setOutputSchema(new Fields(dataSchema));
 		builder.setBolt("joinjoinsup", new SynefoJoinBolt("joinjoinsup", synefoIP, synefoPort, 
-				joiner, zooIP, false), 3)
+				joiner, zooIP, true), 3)
 				.directGrouping("joindispatch2");
 		taskNumber += 3;
 		taskList = new ArrayList<String>();
@@ -192,6 +192,7 @@ public class TpchQueryFiveTopology {
 
 		conf.setDebug(false);
 //		conf.setNumWorkers(8);
+		conf.put(Config.TOPOLOGY_WORKER_CHILDOPTS, "-Xmx4096m -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:NewSize=128m -XX:CMSInitiatingOccupancyFraction=70 -XX:-CMSConcurrentMTEnabled -Djava.net.preferIPv4Stack=true");
 		conf.put(Config.TOPOLOGY_RECEIVER_BUFFER_SIZE, 8);
 		conf.put(Config.TOPOLOGY_TRANSFER_BUFFER_SIZE, 32);
 		conf.put(Config.TOPOLOGY_EXECUTOR_RECEIVE_BUFFER_SIZE, 16384);
